[tool.poetry]
name = "python-os-console"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2020.1"
tweepy = "^3.9.0"
youtube-dl = "^2020.7.28"
aiohttp = "^3.6.2"
async-timeout = "^3.0.1"
discord = "^1.0.1"
discord-webhook = "^0.8.0"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
